cards for games distributing, will fix spacing

--- a/client/src/pages/SavedGames/savedgames.scss
+++ b/client/src/pages/SavedGames/savedgames.scss
@@ -1,3 +1,10 @@
 .saved-games {
 	background-color: orange;
+
+	h4 {
+		font-size: 40px;
+		font-family: "Staatliches", cursive;
+		text-align: center;
+		margin-top: 50px;
+	}
 }
